--- a/docs/style.css
+++ b/docs/style.css
@@ -42,6 +42,15 @@ section h2 {
     color: #0f112e;
 }
 
+select[id="estado"] {
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
 input[type="text"] {
     width: 100%;
     padding: 12px;
